--- a/css/style.css
+++ b/css/style.css
@@ -1,248 +1,1 @@
-*:root {
-  --play: "Playfair Display", serif;
-  --mont: "Montserrat", sans-serif; }
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; }
-  @media only screen and (max-width: 62.5em) {
-    html {
-      font-size: 50%; } }
-
-.container {
-  background-color: #eee;
-  min-height: 100vh;
-  margin: 5rem 20rem;
-  display: grid;
-  grid-template-columns: repeat(5, [col-start] 1fr [col-end]);
-  grid-auto-rows: min-content;
-  gap: 2rem; }
-  @media only screen and (max-width: 75em) {
-    .container {
-      grid-template-columns: repeat(4, [col-start] 1fr [col-end]);
-      margin: 2rem 5rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .container {
-      grid-template-columns: repeat(3, [col-start] 1fr [col-end]);
-      margin: 1rem; } }
-  .container__heading-1 {
-    font-family: var(--play);
-    font-weight: 700;
-    font-size: 4.8rem;
-    line-height: 6.4rem;
-    color: #000;
-    grid-column: col-start 1 / -1; }
-  .container__text-box {
-    display: flex;
-    align-items: flex-start;
-    grid-column: col-start 1 / col-end 3; }
-  .container__icon {
-    margin-top: 0.5rem;
-    margin-right: 1rem; }
-  .container__text {
-    font-family: var(--mont);
-    font-style: italic;
-    font-weight: 500;
-    font-size: 1.4rem;
-    line-height: 1.7rem;
-    color: #4f4f4f; }
-  .container__img {
-    width: 100%;
-    grid-column: col-start 1 / -1; }
-  .container__heading-2 {
-    font-family: var(--play);
-    font-weight: 700;
-    font-size: 2.4rem;
-    line-height: 3.2rem;
-    color: #333;
-    grid-column: col-start 1 / col-end 1; }
-  .container__heading-3 {
-    font-family: var(--play);
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.8rem;
-    line-height: 2.4rem;
-    color: #333;
-    grid-column: col-start 1 / col-end 1; }
-    @media only screen and (max-width: 37.5em) {
-      .container__heading-3 {
-        grid-column: col-start 1 / -1; } }
-  .container__source {
-    grid-column: col-start 1 / col-end 3;
-    display: flex;
-    font-family: var(--mont);
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    color: #bdbdbd;
-    margin-top: 5rem; }
-  .container__link:link, .container__link:visited {
-    text-decoration: none;
-    color: currentColor; }
-
-.card {
-  grid-column: col-start 5 / col-end 5;
-  grid-row: 4 / span 7;
-  background: #ffffff;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center; }
-  @media only screen and (max-width: 75em) {
-    .card {
-      grid-column: col-start 4 / col-end 4; } }
-  @media only screen and (max-width: 37.5em) {
-    .card {
-      /* AT THIS BP A GRID WOULD BE BETTER THAN FLEXBOX IMO */
-      grid-column: 1 / -1;
-      grid-row: 4 / 5;
-      display: grid;
-      padding: 1rem;
-      justify-content: stretch;
-      gap: 2rem 0; }
-      .card__mobile-1 {
-        grid-column: 1 / 2; }
-      .card__mobile-2 {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3; }
-      .card__mobile-3 {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3; }
-      .card__mobile-4 {
-        grid-column: 3 / 4;
-        grid-row: 2 / 3; } }
-  .card__details {
-    display: grid;
-    gap: 0 1.5rem;
-    align-items: center;
-    justify-content: start; }
-  .card__icon {
-    width: 2.5rem;
-    height: 2.5rem;
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-    fill: #4f4f4f; }
-    .card__icon-orange {
-      fill: #f2994a; }
-  .card__info {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    font-family: var(--mont);
-    font-weight: 700;
-    font-size: 1rem;
-    line-height: 1.2rem;
-    text-transform: uppercase;
-    color: #bdbdbd; }
-  .card__text {
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
-    font-family: var(--mont);
-    font-weight: 500;
-    font-size: 1.4rem;
-    line-height: 1.7rem;
-    color: #333333; }
-    .card__text-orange {
-      color: #f2994a; }
-
-.item {
-  /* THIS IS A CUSTOM CHECKBOX WITH SOME SIBLINGS */
-  grid-column: col-start 1 / col-end 3;
-  display: flex;
-  align-items: start;
-  /* SOME NICE EFFECTS */
-  /* DISPLAYING THE CHECK */ }
-  .item__custom-checkbox {
-    position: relative;
-    cursor: pointer;
-    margin-right: 2rem; }
-  .item__checkbox {
-    opacity: 0; }
-  .item__checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 2rem;
-    width: 2rem;
-    margin-right: 1rem;
-    background-color: #fff;
-    border: 1px solid #eee;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s;
-    /* MAKING THE MIDDLE CHECK WITH AN AFTER + AN CSS ENTITY */ }
-    .item__checkmark::after {
-      content: "\2714";
-      position: absolute;
-      opacity: 0;
-      font-size: 1.5rem;
-      color: rgba(155, 69, 69, 0.7);
-      transition: all 0.2s ease-in; }
-  .item:hover .item__checkbox + .item__checkmark {
-    border: 1px solid #e3e3e3; }
-  .item__checkbox:checked + .item__checkmark {
-    box-shadow: 0px 0px 2px rgba(155, 69, 69, 0.7); }
-  .item__checkbox:checked + .item__checkmark::after {
-    opacity: 1; }
-  .item__text {
-    font-family: var(--mont);
-    font-weight: 500;
-    font-size: 1.6rem;
-    line-height: 2.5rem;
-    color: #333; }
-
-.instruction {
-  grid-column: col-start 1 / col-end 3;
-  display: grid;
-  gap: 0 1.5rem; }
-  .instruction__number {
-    font-family: var(--play);
-    font-weight: 700;
-    font-size: 2.4rem;
-    line-height: 3.2rem;
-    width: 36px;
-    height: 36px;
-    color: #ffffff;
-    border-radius: 6px;
-    background-color: orange;
-    grid-row: 1 / 2;
-    text-align: center; }
-  .instruction__text {
-    font-family: var(--mont);
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    color: #000;
-    grid-row: 1 / 3; }
-
-.footer {
-  grid-column: col-start 1 / -1;
-  margin-top: 10rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-  font-size: 1.4rem;
-  line-height: 1.7rem;
-  color: #a9a9a9;
-  display: flex;
-  justify-content: center; }
-  @media only screen and (max-width: 37.5em) {
-    .footer {
-      margin-top: 5rem; } }
-
-/* UTILITY CLASS */
-.bold {
-  font-weight: 700; }
-
-.italic {
-  font-style: italic; }
+*:root{--play: "Playfair Display", serif;--mont: "Montserrat", sans-serif}*,*::before,*::after{margin:0;padding:0;box-sizing:inherit}html{box-sizing:border-box;font-size:62.5%}@media only screen and (max-width: 62.5em){html{font-size:50%}}.container{background-color:#eee;min-height:100vh;margin:5rem 20rem;display:grid;grid-template-columns:repeat(5, [col-start] 1fr [col-end]);grid-auto-rows:-webkit-min-content;grid-auto-rows:min-content;gap:2rem}@media only screen and (max-width: 75em){.container{grid-template-columns:repeat(4, [col-start] 1fr [col-end]);margin:2rem 5rem}}@media only screen and (max-width: 37.5em){.container{grid-template-columns:repeat(3, [col-start] 1fr [col-end]);margin:1rem}}.container__heading-1{font-family:var(--play);font-weight:700;font-size:4.8rem;line-height:6.4rem;color:#000;grid-column:col-start 1 / -1}.container__text-box{display:flex;align-items:flex-start;grid-column:col-start 1 / col-end 3}.container__icon{margin-top:0.5rem;margin-right:1rem}.container__text{font-family:var(--mont);font-style:italic;font-weight:500;font-size:1.4rem;line-height:1.7rem;color:#4f4f4f}.container__img{width:100%;grid-column:col-start 1 / -1}.container__heading-2{font-family:var(--play);font-weight:700;font-size:2.4rem;line-height:3.2rem;color:#333;grid-column:col-start 1 / col-end 1}.container__heading-3{font-family:var(--play);font-style:italic;font-weight:400;font-size:1.8rem;line-height:2.4rem;color:#333;grid-column:col-start 1 / col-end 1}@media only screen and (max-width: 37.5em){.container__heading-3{grid-column:col-start 1 / -1}}.container__source{grid-column:col-start 1 / col-end 3;display:flex;font-family:var(--mont);font-style:italic;font-weight:400;font-size:1.6rem;line-height:2.4rem;color:#bdbdbd;margin-top:5rem}.container__link:link,.container__link:visited{text-decoration:none;color:currentColor}.card{grid-column:col-start 5 / col-end 5;grid-row:4 / span 7;background:#ffffff;box-shadow:0px 0px 20px rgba(0,0,0,0.1);border-radius:12px;display:flex;flex-direction:column;justify-content:space-evenly;align-items:center}@media only screen and (max-width: 75em){.card{grid-column:col-start 4 / col-end 4}}@media only screen and (max-width: 37.5em){.card{grid-column:1 / -1;grid-row:4 / 5;display:grid;padding:1rem;justify-content:stretch;gap:2rem 0}.card__mobile-1{grid-column:1 / 2}.card__mobile-2{grid-column:1 / 2;grid-row:2 / 3}.card__mobile-3{grid-column:2 / 3;grid-row:2 / 3}.card__mobile-4{grid-column:3 / 4;grid-row:2 / 3}}.card__details{display:grid;gap:0 1.5rem;align-items:center;justify-content:start}.card__icon{width:2.5rem;height:2.5rem;grid-column:1 / 2;grid-row:1 / 3;fill:#4f4f4f}.card__icon-orange{fill:#f2994a}.card__info{grid-column:2 / 3;grid-row:1 / 2;font-family:var(--mont);font-weight:700;font-size:1rem;line-height:1.2rem;text-transform:uppercase;color:#bdbdbd}.card__text{grid-column:2 / 4;grid-row:2 / 3;font-family:var(--mont);font-weight:500;font-size:1.4rem;line-height:1.7rem;color:#333333}.card__text-orange{color:#f2994a}.item{grid-column:col-start 1 / col-end 3;display:flex;align-items:start}.item__custom-checkbox{position:relative;cursor:pointer;margin-right:2rem}.item__checkbox{opacity:0}.item__checkmark{position:absolute;top:0;left:0;height:2rem;width:2rem;margin-right:1rem;background-color:#fff;border:1px solid #eee;border-radius:4px;display:flex;justify-content:center;align-items:center;transition:all 0.2s}.item__checkmark::after{content:"\2714";position:absolute;opacity:0;font-size:1.5rem;color:rgba(155,69,69,0.7);transition:all 0.2s ease-in}.item:hover .item__checkbox+.item__checkmark{border:1px solid #e3e3e3}.item__checkbox:checked+.item__checkmark{box-shadow:0px 0px 2px rgba(155,69,69,0.7)}.item__checkbox:checked+.item__checkmark::after{opacity:1}.item__text{font-family:var(--mont);font-weight:500;font-size:1.6rem;line-height:2.5rem;color:#333}.instruction{grid-column:col-start 1 / col-end 3;display:grid;gap:0 1.5rem}.instruction__number{font-family:var(--play);font-weight:700;font-size:2.4rem;line-height:3.2rem;width:36px;height:36px;color:#ffffff;border-radius:6px;background-color:orange;grid-row:1 / 2;text-align:center}.instruction__text{font-family:var(--mont);font-weight:400;font-size:1.6rem;line-height:2.4rem;color:#000;grid-row:1 / 3}.footer{grid-column:col-start 1 / -1;margin-top:10rem;font-family:"Montserrat", sans-serif;font-weight:600;font-size:1.4rem;line-height:1.7rem;color:#a9a9a9;display:flex;justify-content:center}@media only screen and (max-width: 37.5em){.footer{margin-top:5rem}}.bold{font-weight:700}.italic{font-style:italic}
